samples/_failures_safe/1761258048_72195d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a78f6ffe.c: In function ‘main’:
./samples/SAFE/__tmp_a78f6ffe.c:147:5: error: expected declaration or statement at end of input
  147 |     if (matrix_multiply(&a, &b, &result)) {
      |     ^~
./samples/SAFE/__tmp_a78f6ffe.c:147:5: error: expected declaration or statement at end of input
